--- a/springdemo02/pom.xml
+++ b/springdemo02/pom.xml
@@ -5,7 +5,19 @@
   <groupId>org.example</groupId>
   <artifactId>springdemo02</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>7</source>
+                    <target>7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <packaging>jar</packaging>
 
   <name>springdemo02</name>
   <url>http://maven.apache.org</url>
